--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.4",
     "@react-native-community/datetimepicker": "3.0.4",
     "expo": "^40.0.0",
     "expo-status-bar": "~1.0.3",
