--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.4",
     "@react-native-community/datetimepicker": "3.0.4",
+    "axios": "^0.21.1",
     "expo": "^40.0.0",
     "expo-status-bar": "~1.0.3",
     "moment": "^2.29.1",
